--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,510 @@
-.App {
-  text-align: center;
+@charset "utf-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+
+:root{
+
+  /* Colors */
+  --primary-color:#eb5525;
+  --secondary-color:#F2BD57;
+  --primary-gradient-color: linear-gradient(to right , #598CE6  0% , #3BC9DD 100%);
+  --text-color:#1b1b28;;
+  --dark-color:#3A3A3A;
+  --light-color:#F6F6F6;
+  --body-bg-color:#f9f9f9;
+  --body-bg-light:#FFFCF7;
+  --white-color:#ffffff;
+  --hover-color:#DC0D0D;
+  --heading-color:#212529;
+  --direction: ltr;
+
+  /* Typography */
+  --body-font: 'Roboto', sans-serif;
+  --title-font: 'Roboto', sans-serif;
+  --font-weight-small:300;
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
+  --font-weight-semi-bold: 600;
+  --font-weight-bold: 700;
+
+  /* Others */
+  --transition:.3s;
+  --shadow: rgba(49,132,255,.8);
+  --blur-big:50px;
+  --blur-small:30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dark-theme{
+  --body-bg-color:#000000e6;
+  --body-bg-light: #000000e6;
+  --text-color: #fff;
+  --heading-color:#fFF;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.right-to-left{
+  --direction: rtl;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body{
+  font-family: var(--body-font);
+  background-color: var(--body-bg-color);
+  scroll-behavior: smooth;
+  vertical-align: baseline;
+  overflow-x: hidden;
+  direction: var(--direction);
+  transition: all .3s, background-color 0s;
+}
+
+body.dark-theme{
+  color: var(--white-color);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  -webkit-touch-callout: none;
+  backface-visibility: hidden;
+}
+
+h1,h2,h3,h4,h5,h6{
+  font-family: var(--title-font);
+  font-weight: var(--font-weight-bold);
+  color: var(--heading-color);
+  margin-bottom: 0;
+  direction: var(--direction);
+}
+
+h1{
+  font-size: 2rem;
+}
+
+h2{
+  font-size: 1.60rem;
+}
+
+h3{
+  font-size: 1.40rem;
+}
+
+h4{
+  font-size: 1.20rem;
+}
+
+h5{
+  font-size: 1.10rem;
+}
+
+h6{
+  font-size: .80rem;
+}
+
+p,
+span{
+  font-size: .95rem;
+  color: var(--text-color);
+  font-family: var(--body-font);
+  margin-bottom: 0;
+  direction: var(--direction);
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li{
+  list-style: none;
+  font-family: var(--body-font);
+}
+
+a{
+  font-size: 0.95rem;
+  font-family: var(--body-font);
+  color: var(--text-color);
+  text-decoration: none;
+  transition:var(--transition);
+  direction: var(--direction);
+}
+
+a:hover{
+  color: var(--text-color);
+}
+
+input:not([type="checkbox"]),
+textarea,
+select,
+button {
+  outline: none;
+  border: none;
+}
+
+input::placeholder{
+  font-size: 1rem;
+  font-weight: var(--font-weight-small);
+  color: var(--text-color-light);
+
+}
+
+label{
+  direction: var(--direction);
+}
+
+.right-to-left .uil{
+  display: inline-block;
+}
+
+/* General Css */
+
+.scroll-margin{
+  scroll-margin-top: 155px;
+}
+
+.mt-30{
+  margin-top: 30px;
+}
+
+.mt-40{
+  margin-top: 40px;
+}
+
+.mt-50{
+  margin-top: 50px;
+}
+
+.mt-60{
+  margin-top: 60px;
+}
+
+.mt-100{
+  margin-top: 100px;
+}
+
+.mb-20{
+  margin-bottom: 20px;
+}
+
+.mb-40{
+    margin-bottom: 40px;
+}
+
+.mb-50{
+  margin-bottom: 50px;
+}
+
+.mb-100{
+  margin-bottom: 100px;
+}
+
+.p-50{
+  padding: 50px;
+}
+
+.pt-40{
+  padding-top: 40px;
+}
+
+.pt-50{
+  padding-top: 50px;
+}
+
+.pt-80{
+    padding-top: 80px;
+}
+
+.pt-100{
+  padding-top: 100px;
+}
+
+.pt-200{
+  padding-top: 200px;
+}
+
+.pt-300{
+  padding-top: 300px;
+}
+
+.pb-40{
+  padding-bottom: 40px;
+}
+
+.pb-50{
+    padding-bottom: 50px;
+}
+
+.pb-60{
+  padding-bottom: 60px;
+}
+
+.pb-80{
+    padding-bottom: 80px;
+}
+
+.pb-100{
+  padding-bottom: 100px;
+}
+
+.pb-200{
+  padding-bottom: 200px;
+}
+
+.px-50{
+  padding: 0 50px;
+}
+
+.px-100{
+  padding: 0 100px;
+}
+
+.py-70{
+  padding: 70px 0;
+}
+
+.py-80{
+  padding: 80px 0;
+}
+
+.mr-50{
+  margin-right: 50px;
+}
+
+.sec-spacer-100{
+  padding: 100px 0;
+}
+
+.sec-spacer-80{
+  padding: 80px 0;
+}
+
+.primary-gradient{
+  background-image: linear-gradient(to right, #598CE6  0% , #3BC9DD 100%);
+}
+
+.overflow-title {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-bottom: 5px;
+  overflow-y: hidden;
+  text-overflow: ellipsis;
+}
+
+
+/* Toolbar */
+
+.fs-toolbar{
+  width: 100%;
+  padding: 8px 0;
+  border-bottom: 1px solid var(--primary-color);
+}
+
+.toolbar-wpr{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* Main Nav */
+
+.fs-main-nav{
+  position: relative;
+  width: 100%;
+  padding: 20px 0 16px;
+  background-color: var(--white-color);
+  transition: var(--transition);
+  z-index: 20;
+}
+
+.main-nav{
+  display: grid;
+  grid-template-columns: 200px 1fr 300px;
+}
+
+.fs-main-nav.sticky{
+  position: fixed;
+  top: 0;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 10%);
+}
+
+.nav-search input{
+  width: 95%;
+  height: 40px;
+  background-color: #F3F3F3;
+  border-radius: 5px;
+  border: 1px solid #FF3A27;
+  padding-left: 24px;
+}
+
+.nav-user{
+  display: grid;
+  grid-template-columns: 20px 1fr;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: max-content;
+  height: 45px;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  text-transform: uppercase;
+  padding: 8px;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-right .nav-icon{
+  position: relative;
+  width: 45px;
+  height: 45px;
+  background-color: var(--light-color);
+  text-align: center;
+  line-height: 45px;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-icon .count{
+  position: absolute;
+  top: 4px;
+  right: 2px;
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  font-size: .85rem;
+  background-color: var(--white-color);
+  box-shadow: 0 4px 6px -1px rgba(0,0,0,.1),0 2px 4px -1px rgba(0,0,0,.06);
+  border-radius: 50%;
+  line-height: 18px;
+}
+
+.nav-right .nav-icon i{
+  font-size: 1.20rem;
+  color: var(--primary-color);
+}
+
+.nav-toggle{
+  display: block;
+  font-size: 1.75rem;
+  margin-right: 16px;
+  cursor: pointer;
+
+}
+
+/* Shopping cart */
+
+.shopping-cart {
+  position: relative;
+  cursor: pointer;
+}
+
+.shopping-cart-popup {
+  width: 300px;
+  position: absolute;
+  top: 2.5rem;
+  right: 0;
+  background-color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s;
+  transform: translateY(2rem);
+  border-radius: 5px;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 10%);
+  z-index: 100 !important;
+}
+
+.shopping-cart:hover .shopping-cart-popup {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+  z-index: 1;
+}
+
+.shopping-cart-popup-content {
+  font-family: var(--title-font);
+  font-weight: var(--font-weight-medium);
+  color: var(--primary-color);
+  font-size: 14px;
+  padding: 16px;
+}
+
+.shopping-cart .total-item {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #e5e5e5;
+  padding-bottom: 0.5rem;
+  align-items: center;
+}
+
+.shopping-cart .view-cart {
+  color: var(--primary-color);
+  font-size: 14px;
+}
+
+.shopping-cart .cart-product-list {
+  flex-direction: column;
+}
+
+.shopping-cart .cart-product-item {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #e6e6e6;
+  padding: 1rem 0;
+  text-align: right;
+  align-items: center;
+}
+
+.shopping-cart .cart-product-details > a {
+  display: block;
+  margin-bottom: 10px;
+  color: var(--primary-color);
+  transition: 0.3s;
+}
+
+.shopping-cart .cart-product-quantity {
+  color: var(--timeline-color);
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.shopping-cart .product-inner {
+  position: relative;
+}
+
+.shopping-cart .product-remove {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  width: 20px;
+  height: 20px;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  color: #fff;
+  text-align: center;
+  line-height: 20px;
+}
+
+.shopping-cart .sub-total {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 0;
+}
+
+.shopping-cart .chechout-btn,
+.send-btn {
+  background-color: var(--primary-color);
+  color: #fff;
+  display: block;
+  height: 48px;
+  text-align: center;
+  line-height: 48px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  transition: 0.3s;
 }
