--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -20,4 +20,14 @@
         background-color: var(--primary-color);
         border-radius: 0 5px 5px 0;
     }
+
+    .fs-product-menu a {
+        display: inline-block;
+        font-size: .95rem;
+        font-weight: var(--font-weight-medium);
+        padding: 0 14px;
+        height: 50px;
+        text-align: center;
+        line-height: 50px;
+    }
 }
