--- a/src/App.css
+++ b/src/App.css
@@ -280,8 +280,8 @@ label{
   margin-right: 50px;
 }
 
-.sec-spacer-100{
-  padding: 100px 0;
+.sec-spacer-50{
+  padding: 50px 0;
 }
 
 .sec-spacer-80{
@@ -535,4 +535,43 @@ label{
 
 .fs-banner .slick-slide img{
   width: 100%;
+}
+
+.fs-banner .item{
+  height: 100%;
+}
+
+/* Category  */
+
+.fs-category{
+  background-color: rgba(235,85,37,0.15);
+}
+
+.category-list{
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+  gap: 24px;
+}
+
+.category-list .single-cat{
+  background-color: var(--white-color);
+  padding: 24px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.single-cat .cat-image img{
+  height: 70px;
+}
+
+.single-cat .cat-name{
+  font-weight: var(--font-weight-semi-bold);
+}
+
+.view-cat{
+  display: inline-block;
+  padding: 10px 20px;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  border-radius: 5px;
 }
