--- a/src/App.css
+++ b/src/App.css
@@ -588,7 +588,7 @@ label{
   font-size: 1.15rem;
   font-weight: var(--font-weight-semi-bold);
   color: var(--primary-color);
-  margin: 8px 0;
+  margin: 5px 0;
 }
 
 .deal-products .single-product .product-image{
@@ -618,12 +618,27 @@ label{
   margin-left: 16px;
 }
 
-.sale-count{
+.count-left{
+  display: flex;
+  gap: 16px;
+  margin: 10px 0;
+}
+
+.sale-counter{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 24px;
-  margin-top: 16px;
+  gap: 16px;
+  text-align: center;
+}
+
+.count-num{
+  width: 40px;
+  height: 40px;
+  background-color: #d3d3d3;
+  border-radius: 50%;
+  line-height: 40px;
+  margin-bottom: 5px;
 }
 
 /* Featured Products */
@@ -636,14 +651,17 @@ label{
   position: absolute;
   bottom: 5px;
   left: 5px;
-  filter: grayscale(1);
-  opacity: .5;
-  z-index: 1;
 }
 
 .thumbs-img img{
   width: 50px;
   margin: 5px;
+  opacity: .3;
+  cursor: pointer;
+}
+
+.thumbs-img img.active{
+  opacity: 1;
 }
 
 .single-product .product-content{
@@ -658,7 +676,7 @@ label{
 }
 
 .product-content h5{
-  margin-top: 10px;
+  margin-top: 5px;
   font-weight: var(--font-weight-normal);
 }
 
