--- a/src/App.css
+++ b/src/App.css
@@ -635,7 +635,8 @@ label{
 .count-num{
   width: 40px;
   height: 40px;
-  background-color: #d3d3d3;
+  color: var(--white-color);
+  background-color: var(--primary-color);
   border-radius: 50%;
   line-height: 40px;
   margin-bottom: 5px;
