--- a/src/App.css
+++ b/src/App.css
@@ -874,7 +874,7 @@ label{
   height: 40px;
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 4px;
   background-color: #f7f8f9;
   border: 1px solid var(--primary-color);
   border-radius: 20px;
@@ -886,6 +886,7 @@ label{
   border: none;
   background-color: transparent;
   outline: none;
+  padding-left: 0;
 }
 
 .single-widget{
@@ -919,6 +920,46 @@ label{
   display: block;
   font-weight: var(--font-weight-normal);
   margin: 4px 0;
+}
+
+.color-filter li,
+.size-filter li{
+  display: inline-block;
+  margin-right: 7px;
+}
+
+.color-filter input{
+  appearance: none;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.color-filter input:checked{
+  padding: 4px;
+  box-shadow: 0 0 0 2px #fff,0 0 0 3px var(--dark-color);
+}
+
+.size-filter input{
+  appearance: none;
+}
+
+.size-filter label span{
+  display: inline-block;
+  min-width: 30px;
+  height: 30px;
+  border: 1px solid var(--primary-color);
+  text-align: center;
+  line-height: 30px;
+  cursor: pointer;
+  margin-bottom: 8px;
+  padding:0 2px;
+}
+
+.size-filter input:checked ~ span{
+  color: var(--white-color);
+  background-color: var(--primary-color);
 }
 
 /* Pagination */
