--- a/src/App.css
+++ b/src/App.css
@@ -1073,3 +1073,66 @@ label{
   padding: 16px 0;
   background-color: #232F3E;
 }
+
+/* Product Details */
+
+.product-images-slider .swiper-slide{
+  margin-bottom: 10px;
+}
+
+.product-images-slider .swiper-slide img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 0 10px;
+}
+
+.swiper-button-next, .swiper-button-prev{
+  color: var(--primary-color) !important;
+}
+
+/* .product-images-slider .swiper-slide{
+  padding-top: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.swiper-slide img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.product-images-slider .swiper-button-prev {
+  left: 0;
+  color: #000;
+}
+
+.product-images-slider .swiper-button-next{
+  right: 0;
+  color: #000;
+}
+
+.product-images-slider-thumbs .swiper-slide{
+  cursor: pointer;
+  border: 1px solid #dddbdb;
+}
+
+.product-images-slider-thumbs .swiper-slide .swiper-slide-thumb-active{
+  border-color: #ff0000;
+}
+
+.product-images-slider-thumbs .swiper-slide-wrapper {
+  width: 100%;
+  padding-top: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.product-images-slider-thumbs .swiper-slide-wrapper img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+} */
