--- a/src/App.css
+++ b/src/App.css
@@ -1141,3 +1141,173 @@ label{
   display: inline-block;
   margin-right: 5px;
 }
+
+.nav-tabs{
+  border: none;
+  margin-bottom: 32px;
+}
+
+.nav-tabs .nav-link{
+  font-size: 1.1rem;
+  color: var(--dark-color);
+  border:none;
+  background-color: transparent !important;
+}
+
+.nav-tabs .nav-link.active{
+  color: var(--primary-color);
+  border-bottom: 2px solid var(--primary-color);
+}
+
+.info-tab-content .product-information table {
+  border: 1px solid #e5e5e5;
+  width: 100%;
+}
+
+.product-information table tbody tr th {
+  border: 1px solid #e5e5e5;
+  font-size: .90rem;
+  font-weight: var(--font-weight-medium);
+  text-transform: uppercase;
+  padding: 14px;
+  line-height: 1.5;
+}
+
+.product-information table tbody tr td {
+  padding: 16px;
+  font-style: italic;
+  color: #999;
+  border-top: 0;
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #e5e5e5;
+  margin: 0;
+  line-height: 1.5;
+}
+
+.product-review-content {
+  margin-top: 48px;
+}
+
+.product-review-content .comment-author {
+  position: relative;
+}
+
+.product-review-content .comment-author .comment-thumb {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.product-review-content .comment-author .comment-content {
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+  margin-left: 80px;
+  position: relative;
+  padding: 24px 24px 20px;
+  margin: 0 0 0 80px;
+}
+
+.product-review-content .comment-form-content {
+  margin-top: 40px;
+}
+
+.product-review-content .comment-form-content .title {
+  color: #999;
+  display: block;
+  font-size: 1.154em;
+  font-weight: 500;
+  margin: 0 0 20px;
+  text-transform: uppercase;
+}
+
+.product-review-content .comment-form-content .desc {
+  color: #999;
+  margin-bottom: 11px;
+}
+
+.product-review-tabs-content .review-comment-form {
+  margin-top: 18px;
+}
+
+.review-comment-form .form-group {
+  margin-bottom: 18px;
+}
+
+.comment-form-content .form-label {
+  cursor: pointer;
+  color: #999;
+  font-size: 14px;
+  margin: 0 0 5px;
+}
+
+.review-comment-form .form-label {
+  font-weight: 400;
+  margin: 0 0 5px;
+}
+
+.review-comment-form .form-control {
+  font-size: 14px;
+  width: 100%;
+  height: 50px;
+  line-height: 48px;
+  max-width: 100%;
+  padding: 0 15px;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+  border-radius: 0;
+  box-shadow: none;
+  outline: none;
+}
+
+.review-comment-form textarea.form-control {
+  padding-top: 10px;
+  height: 125px;
+  line-height: 1.8;
+}
+
+.btn-theme {
+  background: var(--primary-color);
+  border-radius: 3px;
+  color: #fff;
+  display: inline-block;
+  line-height: 1;
+  font-weight: 500;
+  padding: 14px 81px;
+  text-transform: uppercase;
+  transition: all 0.3s ease-out;
+}
+
+.rating-box i{
+  color: goldenrod;
+}
+
+.product-desc ul{
+  margin: 32px 0;
+  padding-bottom: 16px;
+  border-bottom: 1px solid #d3d3d3;
+}
+
+.product-desc ul li{
+  position: relative;
+  display: grid;
+  grid-template-columns: 180px 1fr;
+  grid-column-gap: 10px;
+  margin-bottom: 8px;
+  padding-left: 16px;
+}
+
+.product-desc ul li::before{
+  position: absolute;
+  content: "\25CF";
+  left: 0;
+  top:-5px;
+  font-size: 1.2rem;
+}
+
+.product-desc h4{
+  font-weight: var(--font-weight-semi-bold);
+  padding-bottom: 10px;
+  border-bottom: 1px solid #d3d3d3;
+  margin: 32px 0 16px;
+}
