--- a/src/App.css
+++ b/src/App.css
@@ -527,8 +527,52 @@ label{
   font-family: var(--body-font);
 }
 
-.category-span i{
+.toggleIcon{
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+
+.toggleIcon i{
   font-size: 1.4rem;
+}
+
+.sidebar-wpr{
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0,0,0,.6);
+  z-index: 70;
+}
+
+.sidebar-wpr.show{
+  display: block;
+}
+
+.sidebar-menu{
+  width: 350px;
+  height: 100%;
+  left: 0;
+  visibility: hidden;
+  opacity: 0;
+  background-color: var(--white-color);
+  transition: var(--transition) ease;
+}
+
+.sidebar-wpr.show .sidebar-menu{
+  visibility: visible;
+  opacity: 1;
+}
+
+.menu-heading{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 8px;
+  border-bottom: 1px solid #d3d3d3;
 }
 
 /* Hero Banner */
