--- a/src/App.css
+++ b/src/App.css
@@ -585,6 +585,31 @@ label{
   height: 100%;
 }
 
+.fs-banner .slick-dots{
+  bottom: 24px;
+  z-index: 100;
+}
+
+.fs-banner .slick-dots li{
+  width: 10px;
+  height: 10px;
+}
+
+.fs-banner .slick-dots li button{
+  width: 10px;
+  height: 10px;
+  background-color: #d3d3d3;
+  border-radius: 50%;
+}
+
+.slick-active button{
+  background-color: var(--primary-color) !important;
+}
+
+.slick-dots li button:before{
+  content: none;
+}
+
 /* Category  */
 
 .fs-category{
