--- a/src/App.css
+++ b/src/App.css
@@ -453,19 +453,25 @@ label{
 
 .shopping-cart .cart-product-item {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 100px 1fr;
   border-bottom: 1px solid #e6e6e6;
   padding: 1rem 0;
   text-align: right;
   align-items: center;
 }
 
+.cart-product-image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .shopping-cart .cart-product-details > a {
   display: block;
-  margin-bottom: 10px;
   color: var(--primary-color);
   transition: 0.3s;
+  line-height: 1.75;
 }
 
 .shopping-cart .cart-product-quantity {
