--- a/src/App.css
+++ b/src/App.css
@@ -326,16 +326,17 @@ label{
   z-index: 20;
 }
 
+.fs-main-nav.sticky{
+  position: fixed;
+  top: 0;
+  padding: 16px;
+  box-shadow: 0px 2px 5px rgb(0 0 0 / 5%);
+}
+
 .main-nav{
   display: grid;
   grid-template-columns: 200px 1fr 300px;
   align-items: center;
-}
-
-.fs-main-nav.sticky{
-  position: fixed;
-  top: 0;
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 10%);
 }
 
 .nav-search input{
