--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   --font-weight-normal: 400;
   --font-weight-medium: 500;
   --font-weight-semi-bold: 600;
-  /* --font-weight-bold: 700; */
+  --font-weight-bold: 700;
 
   /* Others */
   --transition:.3s;
