--- a/src/App.css
+++ b/src/App.css
@@ -361,6 +361,10 @@ label{
   border-radius: 5px;
 }
 
+.nav-user:hover{
+  color: var(--white-color);
+}
+
 .nav-right .nav-icon{
   position: relative;
   width: 45px;
@@ -1496,5 +1500,40 @@ label{
   font-size: 1.5rem;
   color: var(--primary-color);
   cursor: pointer;
+}
+
+/* Sign In */
+
+.sign-form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-form form{
+  width: 55%;
+  padding: 50px 70px;
+  padding-bottom: 45px;
+  box-shadow: 0px 40px 80px 0px rgb(2 2 26 / 14%);
+}
+
+.single-input input {
+  width: 100%;
+  height: 60px;
+  line-height: 52px;
+  padding: 0 50px;
+  font-size: 14px;
+  border: 2px solid transparent;
+  background: #f5f5f5;
+  color: #222;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
+
+.single-input i{
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
