--- a/src/App.css
+++ b/src/App.css
@@ -1488,9 +1488,12 @@ label{
 
 .quick-view-container{
   position: relative;
-  width: 850px;
+  width: 45%;
+  height: 85%;
   background-color: var(--white-color);
   padding: 24px;
+  border-radius: 8px;
+  overflow: auto;
 }
 
 .modal-close{
@@ -1504,22 +1507,84 @@ label{
 
 /* Sign In */
 
-.sign-form{
+.sign-head{
+  font-weight: var(--font-weight-semi-bold);
+  color: var(--primary-color);
+  text-align: center;
+}
+
+.sign-form-wpr{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 40px 0;
 }
 
-.sign-form form{
-  width: 55%;
+.sign-form{
+  width: 45%;
   padding: 50px 70px;
   padding-bottom: 45px;
   box-shadow: 0px 40px 80px 0px rgb(2 2 26 / 14%);
 }
 
+.sign-form a{
+  color: var(--primary-color);
+}
+
+.social-sign-links{
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.social-sign {
+  position: relative;
+  display: block;
+  height: 50px;
+  color: var(--dark-color) !important;
+  background: #f2f2f2;
+  line-height: 50px;
+  border-radius: 6px;
+  padding-left: 23px;
+  margin-bottom: 16px;
+  text-align: left;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.social-sign i{
+  font-size: 1.15rem;
+  color: var(--white-color);
+  margin-right: 26px;
+}
+
+.social-sign::before{
+  position: absolute;
+  content: "";
+  width: 18%;
+  height: 100%;
+  top: 0;
+  left: -5%;
+  background-color: #3360bd;
+  transition: var(--transition);
+  z-index: -1;
+}
+
+.gmail-sign::before{
+  background-color: #e93e30;
+}
+
+.social-sign:hover{
+  color: var(--white-color) !important;
+}
+
+.social-sign:hover:before{
+  width: 100%;
+  left: 0;
+}
+
 .single-input input {
   width: 100%;
-  height: 60px;
+  height: 55px;
   line-height: 52px;
   padding: 0 50px;
   font-size: 14px;
@@ -1531,9 +1596,66 @@ label{
   border-radius: 6px;
 }
 
+.single-input label{
+  color: var(--primary-color);
+  margin-bottom: 8px;
+}
+
 .single-input i{
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 57%;
+  left: 4%;
+}
+
+.sign-action{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sign-action input {
+  appearance: none;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background: transparent;
+  border: 1px solid var(--primary-color);
+  outline: none;
+  border-radius: 4px;
+  margin-right: 5px;
+}
+
+.sign-action input:checked {
+  position: relative;
+  background-color: #ff8429;
+  border-color: transparent;
+}
+
+.sign-action input:checked::after {
+  box-sizing: border-box;
+  content: "\f00c";
+  position: absolute;
+  font-family: 'Font Awesome 6 Free';
+  font-weight: var(--font-weight-semi-bold);
+  font-size: 11px;
+  color: #ffffff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.sign-btn {
+  display: inline-block;
+  width: 100%;
+  height: 50px;
+  font-size: .95rem;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  line-height: 50px;
+  padding: 0px 50px;
+  box-shadow: none;
+  border-radius: 8px;
+  margin: 16px 0;
+  z-index: 1;
 }
 
