--- a/src/App.css
+++ b/src/App.css
@@ -1282,7 +1282,7 @@ label{
 
 .cart-btn{
   display: inline-block;
-  width: 150px;
+  min-width: 150px;
   height: 40px;
   color: var(--white-color);
   border-radius: 4px;
@@ -1290,6 +1290,7 @@ label{
   text-align: center;
   line-height: 40px;
   margin-left: 16px;
+  padding: 0 16px;
 }
 
 .product-share *{
@@ -1657,5 +1658,37 @@ label{
   border-radius: 8px;
   margin: 16px 0;
   z-index: 1;
+}
+
+/* Shipping */
+
+.shipping-info input{
+  display: block;
+  width: 100%;
+  height: 45px;
+  font-size: .90rem;
+  border-radius: 5px;
+  padding-left: 16px;
+  margin-bottom: 18px;
+}
+
+.order-totals input::placeholder{
+  font-size: .90rem;
+  color: #999;
+}
+
+.flat-rate b{
+  color: var(--primary-color);
+}
+
+.shopcart-total{
+  padding: 24px;
+  border: 1px solid #e2e9e1;
+}
+
+.shopcart-total table td{
+  font-size: 1rem;
+  padding: 6px 10px;
+  text-align: left;
 }
 
