--- a/src/App.css
+++ b/src/App.css
@@ -610,6 +610,27 @@ label{
   border-bottom: 1px solid #d3d3d3;
 }
 
+.sidebar-menu .nav-menu li a{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: .95rem;
+  padding: 6px 16px;
+  margin-bottom: 1px;
+  background-color: #d3d3d3;
+  /* border-bottom: 1px solid #d3d3d3; */
+  transition: var(--transition);
+}
+
+.nav-menu li a:hover{
+  color: var(--white-color) !important;
+  background-color: var(--primary-color);
+}
+
+.nav-menu li a img{
+  width: 30px;
+}
+
 /* Hero Banner */
 
 .fs-banner .slick-slide img{
