--- a/src/App.css
+++ b/src/App.css
@@ -1792,3 +1792,37 @@ label{
   text-transform: capitalize;
 }
 
+/* Order Track */
+
+.fs-order-track{
+  width: 80%;
+  margin: 0 auto;
+  padding: 32px;
+  border: 1px solid #d3d3d3;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgb(0 0 0 / 5%);
+}
+
+.order-data{
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--primary-color);
+}
+
+.order-product{
+  display: flex;
+  justify-content: space-around;
+}
+
+.order-product .product-image{
+  width: 120px;
+  height: 150px;
+  border-radius: 5px;
+}
+
+.order-product .product-image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
