--- a/src/App.css
+++ b/src/App.css
@@ -1806,7 +1806,7 @@ label{
   display: flex;
   justify-content: space-between;
   background-color: var(--primary-color);
-  padding: 24px;
+  padding: 40px 32px 90px;
   border-radius: 10px 10px 0 0;
 }
 
@@ -1830,5 +1830,98 @@ label{
   height: 100%;
   object-fit: cover;
   border-radius: 25px;
+}
+
+.shipping-adrs{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 16px;
+  background-color: #ef8a69d1;
+  border-radius: 5px;
+}
+
+.shipping-adrs .address{
+  padding-bottom: 24px;
+  margin-bottom: 8px;
+  border-bottom: 1px dashed var(--primary-color);
+}
+
+.order-track-sts{
+  height: 550px;
+  background-image: url("../public/images/delivery.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 0 0 10px 10px;
+}
+
+.track {
+  position: relative;
+  height: 7px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.track .step {
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  width: 25%;
+  margin-top: -22px;
+  text-align: center;
+}
+
+.track .step .passed .icon { 
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.track .icon {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  position: relative;
+  border-radius: 100%;
+  background: #ddd
+}
+
+.track .text {
+  display: block;
+  margin-top: 7px
+}
+
+.step .active .icon,
+.step .active .text{
+  display: none;
+}
+
+.step-details{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -19px;
+  left: 0;
+  border-radius: 10px;
+}
+
+.step-details .heading{
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px 10px 0 0;
+  background-color: var(--white-color);
+  padding: 10px;
+}
+
+.step-details p{
+  display: block;
+  font-size: .85rem;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  border-radius: 0 0 10px 10px;
+  padding: 10px 8px;
 }
 
