--- a/src/App.css
+++ b/src/App.css
@@ -1636,6 +1636,7 @@ label{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .sign-action input {
