--- a/src/App.css
+++ b/src/App.css
@@ -2285,3 +2285,20 @@ label{
 	font-size: 30px;
 	cursor: pointer;
 }
+
+/* OTP */
+
+.otp-source span{
+  font-size: .85rem;
+  color: var(--text-color-light);
+}
+
+.otp-number input{
+  width: 40px;
+  height: 50px;
+  background: #F3F3F3;
+  box-shadow: inset 0px 0px 4px 1px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+  margin-right: 7px;
+  padding: 0 10px;
+}
